src/test/deca/codegen/invalid/created/objet/intReturnFloat.deca
// error : The return type and method type are not compatible

class A {
    int m(float a) {
        return a;
    }


}

{
    A a = new A();
    println(a.m(5));
}